--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "popmotion": "^11.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.0",
     "react-icons": "^4.7.1",
     "react-paginate": "^8.1.4",
     "react-redux": "^8.0.5",
